@@ -1,3 +1,6 @@
+05/09/10 Julien Dutheil
+* First draft of CaseMaskedAlphabet, for dealing with repeat-masked sequences for instance.
+
 21/07/10 Julien Dutheil
 * Added method hasSequence(name) in SequenceContainer interface.
 
